--- a/webapp/src/styles/bootstrap.scss
+++ b/webapp/src/styles/bootstrap.scss
@@ -1,26 +1,145 @@
-$white:    #fff;
-$gray-100: #f1f3f5; // Open Color gray-1
-$gray-200: #e9ecef; // Open Color gray-2
-$gray-300: #dee2e6; // Open Color gray-3
-$gray-400: #ced4da; // Open Color gray-4
-$gray-500: #adb5bd; // Open Color gray-5
-$gray-600: #868e96; // Open Color gray-6
-$gray-700: #495057; // Open Color gray-7
-$gray-800: #343a40; // Open Color gray-8
-$gray-900: #212529; // Open Color gray-9
-$black:    #000;
+/*!******************************************************************************
+ * Copyright (c) 2026 Voguh
+ *
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ ******************************************************************************/
 
-$blue:    #339af0; // Open Color blue-5
-$indigo:  #5c7cfa; // Open Color indigo-5
-$purple:  #845ef7; // Open Color violet-5
-$pink:    #f06595; // Open Color pink-5
-$red:     #ff6b6b; // Open Color red-5;
-$orange:  #ff922b; // Open Color orange-5;
-$yellow:  #fcc419; // Open Color yellow-5;
-$green:   #51cf66; // Open Color green-5
-$teal:    #20c997; // Open Color teal-5
-$cyan:    #22b8cf; // Open Color cyan-5
+@import "./open-color.scss";
 
+$white:    $oc-white;
+$gray-100: $oc-gray-1;
+$gray-200: $oc-gray-2;
+$gray-300: $oc-gray-3;
+$gray-400: $oc-gray-4;
+$gray-500: $oc-gray-5;
+$gray-600: $oc-gray-6;
+$gray-700: $oc-gray-7;
+$gray-800: $oc-gray-8;
+$gray-900: $oc-gray-9;
+$black:    $oc-black;
+
+$blue:     $oc-blue-5;
+$blue-100: $oc-blue-1;
+$blue-200: $oc-blue-2;
+$blue-300: $oc-blue-3;
+$blue-400: $oc-blue-4;
+$blue-500: $oc-blue-5;
+$blue-600: $oc-blue-6;
+$blue-700: $oc-blue-7;
+$blue-800: $oc-blue-8;
+$blue-900: $oc-blue-9;
+
+$indigo:     $oc-indigo-5;
+$indigo-100: $oc-indigo-1;
+$indigo-200: $oc-indigo-2;
+$indigo-300: $oc-indigo-3;
+$indigo-400: $oc-indigo-4;
+$indigo-500: $oc-indigo-5;
+$indigo-600: $oc-indigo-6;
+$indigo-700: $oc-indigo-7;
+$indigo-800: $oc-indigo-8;
+$indigo-900: $oc-indigo-9;
+
+$purple:     $oc-violet-5;
+$purple-100: $oc-violet-1;
+$purple-200: $oc-violet-2;
+$purple-300: $oc-violet-3;
+$purple-400: $oc-violet-4;
+$purple-500: $oc-violet-5;
+$purple-600: $oc-violet-6;
+$purple-700: $oc-violet-7;
+$purple-800: $oc-violet-8;
+$purple-900: $oc-violet-9;
+
+$pink:     $oc-pink-5;
+$pink-100: $oc-pink-1;
+$pink-200: $oc-pink-2;
+$pink-300: $oc-pink-3;
+$pink-400: $oc-pink-4;
+$pink-500: $oc-pink-5;
+$pink-600: $oc-pink-6;
+$pink-700: $oc-pink-7;
+$pink-800: $oc-pink-8;
+$pink-900: $oc-pink-9;
+
+$red:     $oc-red-5;
+$red-100: $oc-red-1;
+$red-200: $oc-red-2;
+$red-300: $oc-red-3;
+$red-400: $oc-red-4;
+$red-500: $oc-red-5;
+$red-600: $oc-red-6;
+$red-700: $oc-red-7;
+$red-800: $oc-red-8;
+$red-900: $oc-red-9;
+
+$orange:     $oc-orange-5;
+$orange-100: $oc-orange-1;
+$orange-200: $oc-orange-2;
+$orange-300: $oc-orange-3;
+$orange-400: $oc-orange-4;
+$orange-500: $oc-orange-5;
+$orange-600: $oc-orange-6;
+$orange-700: $oc-orange-7;
+$orange-800: $oc-orange-8;
+$orange-900: $oc-orange-9;
+
+$yellow:     $oc-yellow-5;
+$yellow-100: $oc-yellow-1;
+$yellow-200: $oc-yellow-2;
+$yellow-300: $oc-yellow-3;
+$yellow-400: $oc-yellow-4;
+$yellow-500: $oc-yellow-5;
+$yellow-600: $oc-yellow-6;
+$yellow-700: $oc-yellow-7;
+$yellow-800: $oc-yellow-8;
+$yellow-900: $oc-yellow-9;
+
+$green:     $oc-green-5;
+$green-100: $oc-green-1;
+$green-200: $oc-green-2;
+$green-300: $oc-green-3;
+$green-400: $oc-green-4;
+$green-500: $oc-green-5;
+$green-600: $oc-green-6;
+$green-700: $oc-green-7;
+$green-800: $oc-green-8;
+$green-900: $oc-green-9;
+
+$teal:     $oc-teal-5;
+$teal-100: $oc-teal-1;
+$teal-200: $oc-teal-2;
+$teal-300: $oc-teal-3;
+$teal-400: $oc-teal-4;
+$teal-500: $oc-teal-5;
+$teal-600: $oc-teal-6;
+$teal-700: $oc-teal-7;
+$teal-800: $oc-teal-8;
+$teal-900: $oc-teal-9;
+
+$cyan:     $oc-cyan-5;
+$cyan-100: $oc-cyan-1;
+$cyan-200: $oc-cyan-2;
+$cyan-300: $oc-cyan-3;
+$cyan-400: $oc-cyan-4;
+$cyan-500: $oc-cyan-5;
+$cyan-600: $oc-cyan-6;
+$cyan-700: $oc-cyan-7;
+$cyan-800: $oc-cyan-8;
+$cyan-900: $oc-cyan-9;
+
+$primary:   $blue-800;
+$secondary: $gray-800;
+$success:   $green-800;
+$info:      $cyan-800;
+$warning:   $yellow-800;
+$danger:    $red-800;
+// $light:     $gray-100 !default;
+// $dark:      $gray-900 !default;
 
 $font-family-sans-serif: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-monospace:  "Roboto Mono", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
