--- a/webapp/src/styles/open-color.scss
+++ b/webapp/src/styles/open-color.scss
@@ -1,3 +1,24 @@
+$oc-dark-0: #c9c9c9;
+$oc-dark-0-rgb: 201, 201, 201;
+$oc-dark-1: #b8b8b8;
+$oc-dark-1-rgb: 184, 184, 184;
+$oc-dark-2: #828282;
+$oc-dark-2-rgb: 130, 130, 130;
+$oc-dark-3: #696969;
+$oc-dark-3-rgb: 105, 105, 105;
+$oc-dark-4: #424242;
+$oc-dark-4-rgb: 66, 66, 66;
+$oc-dark-5: #3b3b3b;
+$oc-dark-5-rgb: 59, 59, 59;
+$oc-dark-6: #2e2e2e;
+$oc-dark-6-rgb: 46, 46, 46;
+$oc-dark-7: #242424;
+$oc-dark-7-rgb: 36, 36, 36;
+$oc-dark-8: #1f1f1f;
+$oc-dark-8-rgb: 31, 31, 31;
+$oc-dark-9: #141414;
+$oc-dark-9-rgb: 20, 20, 20;
+
 /*!******************************************************************************
  * START OF OPEN COLOR
  ******************************************************************************/
