rollback: back to vite instead webpack

--- a/webapp/src/styles/bootstrap.scss
+++ b/webapp/src/styles/bootstrap.scss
@@ -162,4 +162,4 @@ $body-bg:    $oc-white;
 $body-color-dark: $oc-dark-0;
 $body-bg-dark:    $oc-dark-7;
 
-@import '~bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
